--- a/styles.css
+++ b/styles.css
@@ -550,6 +550,8 @@ PROJECTS
 
 .project__img {
 	width: 100%;
+	height: 100%;
+	object-fit: contain;
 	transition: all 600ms ease;
 }
 
@@ -558,6 +560,8 @@ PROJECTS
 	border-radius: 20px;
 	box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
 	overflow: hidden;
+	object-fit: contain;
+	max-height: 600px;
 }
 
 .project__description {
@@ -760,13 +764,11 @@ SHAPES
 	position: relative;
 	width: 12px;
 	height: 12px;
-  	display: flex;
+	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
 .social__link-file {
 	position: relative;
-
-
 }
